force-app/main/default/objects/FieloEE__TagItem__c/FieloEE__TagItem__c.object-meta.xml
<CustomObject>
    <description>Set of tags applied to a content feed.</description>
    <label>Tag Item</label>
    <nameField>
        <displayFormat>TI-{0000}</displayFormat>
        <label>Tag Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>