force-app/main/default/objects/FieloEE__TagItem__c/fields/FieloEE__Banner__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Banner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banner</label>
    <referenceTo>FieloEE__Banner__c</referenceTo>
    <relationshipLabel>Tags</relationshipLabel>
    <relationshipName>TagItems</relationshipName>
    <type>Lookup</type>
</CustomField>