force-app/main/default/objects/FieloEE__TagItem__c/fields/FieloEE__News__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__News__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Feed</label>
    <referenceTo>FieloEE__News__c</referenceTo>
    <relationshipLabel>Tag Items</relationshipLabel>
    <relationshipName>TagItems</relationshipName>
    <type>Lookup</type>
</CustomField>