force-app/main/default/objects/FieloEE__TagItem__c/fields/FieloEE__Tag__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>FieloEE__Tag__c</referenceTo>
    <relationshipLabel>Tag Items</relationshipLabel>
    <relationshipName>TagItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>